--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
 spring.datasource.username=root
 spring.datasource.password=test
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.security.username=admin
