--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/ShopmeAdmin
 spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
 spring.datasource.username=root
 spring.datasource.password=test
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
