--- a/ShopMeWebParent/ShopMeBackend/pom.xml
+++ b/ShopMeWebParent/ShopMeBackend/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>6.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
