--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.security.username=admin
-spring.security.password=admin
+spring.security.user.name=admin
+spring.security.user.password=admin
