--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.security.user.name=admin
 spring.security.user.password=admin
+com.shopme.images.path=E:/Udemy Learnings/ShopMeProject/ShopMeWebParent/ShopMeBackend
 #logging.file.name=ShopMeWebParent/ShopMeBackend/Shopme-backend.log
 #logging.logback.rollingpolicy.file-name-pattern=Shopme-backend-%d{yyyy-MM-dd}.%i.log
 #logging.logback.rollingpolicy.max-file-size=100KB
